--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://myusername-text-craft-hub.github.io/",
+  "homepage": "https://uniquesht1.github.io/TextCraftHub/",
   "name": "text-craft-hub",
   "version": "0.1.0",
   "private": true,
