--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://uniquesht1.github.io/TextCraftHub",
   "name": "text-craft-hub",
   "version": "0.1.0",
   "private": true,
